# CICRSIM

./: README.md  sim_env.sh  start_simulation.sh
cicr2023_simulator/uav_gazebo/: CMakeLists.txt  package.xml
cicr2023_simulator/uav_gazebo/launch/: spawn_mav.launch
cicr2023_simulator/uav_gazebo/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  mav.gazebo
cicr2023_simulator/uav_gazebo/worlds/: CICR2023.world  CICR2023_MAP1_V1.world  CICR2023_MAP1_V2.world  CICR2023_MAP1_V3.world  CICR2023_MAP1_V4.world  CICR2023_MAP1_V5.world  CICR2023_MAP2_V1.world  CICR2023_MAP2_V2.world  CICR2023_MAP2_V3.world  CICR2023_MAP3_V0.world  CICR2023_MAP3_V1.world  CICR2023_MAP3_V2.world  CICR2023_MAP3_V3.world  CICR2023_MAP4_V1.world  CICR2023_MAP4_V2.world  CICR2023_MAP4_V3.world  CICR2023_MAP4_V4.world  CICR2023_MAP4_V5.world  match.world  random_map_generate.world
cicr2023_simulator/uav_simulation/: CMakeLists.txt  package.xml
cicr2023_simulator/uav_simulation/launch/: env_simulation.launch  gazebo_simulator.xml  keyboard_control.launch  referee_system.launch  uav_simulation.launch  uav_simulator.xml
cicr2023_simulator/uav_simulation/src/: command_process.py  detect_sim.cpp  keyboard_control.py  referee_system.cpp
gazebo_map_generator/: CMakeLists.txt
gazebo_map_generator/src/: random_obstacle.cpp
mav_comm/mav_msgs/: CMakeLists.txt
referee_msgs/: CMakeLists.txt  package.xml
referee_msgs/msg/: Apriltag_info.msg
rotors_simulator/rotors_comm/: CMakeLists.txt  package.xml
rotors_simulator/rotors_description/urdf/: VLP-16.urdf.xacro  ardrone.xacro  multirotor_base.xacro
rotors_simulator/rotors_gazebo/: CMakeLists.txt  package.xml
rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt  package.xml
